search-head-cluster/ocp-splunk-searchhead-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: shc
  namespace: <namespace>
  labels:
    app.kubernetes.io/component: search-head
    app.kubernetes.io/instance: splunk-shc-search-head
    app.kubernetes.io/managed-by: splunk-operator
    app.kubernetes.io/name: search-head
    app.kubernetes.io/part-of: splunk-shc-search-head
spec:
  to:
    kind: Service
    name: splunk-shc-search-head-service
    weight: 100
  port:
    targetPort: splunkweb
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
